# aura

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md
.github/workflows/: auto-tag.yml  ci.yml  deploy-cloud.yml  release.yml
AuraApp/: Package.swift
AuraApp/Sources/: AppState.swift  AuraApp.swift  ContentView.swift  ConversationView.swift  DaemonConnection.swift  DotView.swift  FloatingPanel.swift  KeychainHelper.swift  MessageBubble.swift  PermissionChecker.swift  PermissionsView.swift  Protocol.swift  StatusHeader.swift  TextInputView.swift  WelcomeView.swift
crates/aura-bridge/: Cargo.toml  sandbox.sb
crates/aura-bridge/src/: actions.rs  automation.rs  lib.rs  macos.rs  mapper.rs  script.rs
crates/aura-bridge/tests/: actions_test.rs  mapper_test.rs  script_test.rs
crates/aura-daemon/: Cargo.toml  build.rs  daemon-Info.plist
crates/aura-daemon/src/: bus.rs  cloud.rs  context.rs  daemon.rs  deploy.rs  event.rs  ipc.rs  lib.rs  main.rs  orchestrator.rs  pipeline.rs  processor.rs  protocol.rs  screen_capture.rs  setup.rs  tool_helpers.rs  tools.rs
crates/aura-daemon/tests/: bus_roundtrip_test.rs  bus_test.rs  daemon_test.rs  deploy_test.rs  e2e_test.rs  integration_test.rs  setup_test.rs
crates/aura-firestore/: Cargo.toml
crates/aura-firestore/src/: auth.rs  client.rs  lib.rs
crates/aura-firestore/tests/: auth_test.rs  client_test.rs
crates/aura-gemini/: Cargo.toml
crates/aura-gemini/src/: config.rs  lib.rs  protocol.rs  session.rs  tools.rs  vision_oracle.rs
crates/aura-gemini/tests/: session_test.rs
crates/aura-input/: Cargo.toml
crates/aura-input/src/: accessibility.rs  keyboard.rs  lib.rs  mouse.rs
crates/aura-llm/: Cargo.toml
crates/aura-llm/examples/: test_ollama.rs
crates/aura-llm/src/: conversation.rs  intent.rs  lib.rs  llamacpp.rs  ollama.rs  provider.rs
crates/aura-llm/tests/: intent_test.rs  ollama_test.rs
crates/aura-memory/: Cargo.toml
crates/aura-memory/src/: consolidate.rs  lib.rs  store.rs
crates/aura-memory/tests/: memory_test.rs
crates/aura-menubar/: Cargo.toml
crates/aura-menubar/src/: app.rs  lib.rs  popover.rs  status_item.rs
crates/aura-overlay/: Cargo.toml
crates/aura-overlay/src/: easing.rs  lib.rs  particles.rs  renderer.rs  theme.rs  window.rs
crates/aura-overlay/tests/: easing_test.rs
crates/aura-proxy/: Cargo.toml  Dockerfile
crates/aura-proxy/src/: firestore.rs  lib.rs  main.rs  relay.rs
crates/aura-proxy/tests/: proxy_test.rs
crates/aura-screen/: Cargo.toml
crates/aura-screen/src/: accessibility.rs  capture.rs  context.rs  lib.rs  macos.rs  som.rs
crates/aura-screen/tests/: context_test.rs
crates/aura-voice/: Cargo.toml
crates/aura-voice/src/: audio.rs  lib.rs  pipeline.rs  playback.rs  stt.rs  tts.rs  vad.rs  wakeword.rs
crates/aura-voice/tests/: audio_test.rs  pipeline_test.rs  stt_test.rs  tts_test.rs  vad_test.rs  wakeword_test.rs
docs/: ARCHITECTURE.md  GETTING_STARTED.md  SECURITY.md  TOOLS.md  architecture.md  architecture.mmd
docs/plans/: 2026-03-08-aura-wiring.md  2026-03-08-conversational-voice.md  2026-03-10-aura-v2-design.md  2026-03-10-aura-v2-implementation.md  2026-03-10-gemini-live-implementation.md  2026-03-10-gemini-live-integration-design.md  2026-03-11-input-control-design.md  2026-03-11-input-control-plan.md  2026-03-11-release-automation-design.md  2026-03-12-bugfix-design.md  2026-03-12-bugfix-plan.md  2026-03-12-context-overload-design.md  2026-03-12-context-overload-plan.md  2026-03-12-hackathon-gcp-ui-design.md  2026-03-12-hackathon-gcp-ui-plan.md  2026-03-12-production-hardening-design.md  2026-03-12-screen-verified-execution-design.md  2026-03-12-screen-verified-execution-plan.md  2026-03-13-pipeline-overhaul-design.md  2026-03-13-pipeline-overhaul-plan.md  2026-03-13-production-hardening-plan.md  2026-03-14-deferred-issues.md  2026-03-15-new-tools-design.md  2026-03-15-new-tools-plan.md  2026-03-15-oracle-first-targeting-design.md  2026-03-15-oracle-first-targeting-plan.md
docs/superpowers/plans/: 2026-03-14-adk-memory-agent-plan.md  2026-03-15-device-registration-plan.md
docs/superpowers/specs/: 2026-03-14-adk-memory-agent-design.md  2026-03-15-device-registration-design.md
infrastructure/: .dockerignore  Dockerfile  firestore.rules
infrastructure/consolidation/: Cargo.toml
infrastructure/consolidation/src/: main.rs
infrastructure/memory-agent/: .dockerignore  .gitignore  Dockerfile  agent.py  config.py  requirements.txt  server.py  tools.py
infrastructure/memory-agent/tests/: test_server.py  test_tools.py
scripts/: bundle.sh  deploy-gcp.sh  deploy-proxy.sh  dev.sh  generate-icon.swift  generate-readme-images.sh  generate-release-notes.sh  install.sh  setup-dev-cert.sh  smoke-test.sh  uninstall.sh
