[workspace]
resolver = "2"
members = [
    "crates/aura-daemon",
    "crates/aura-voice",
    "crates/aura-screen",
    "crates/aura-bridge",
    "crates/aura-gemini",
    "crates/aura-memory",
    "crates/aura-menubar",
    "crates/aura-proxy",
    "crates/aura-input",
]

[workspace.package]
version = "1.1.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
