[package]
name = "aura-bridge"
version.workspace = true
edition.workspace = true

[features]
test-support = []

[dev-dependencies]
aura-bridge = { path = ".", features = ["test-support"] }

[dependencies]
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
