[package]
name = "aura-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
aura-voice = { path = "../aura-voice" }
aura-overlay = { path = "../aura-overlay" }
aura-screen = { path = "../aura-screen" }
aura-llm = { path = "../aura-llm" }
aura-bridge = { path = "../aura-bridge" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tokio-util = "0.7"
winit = { version = "0.30", features = ["rwh_06"] }
dirs = "6"
which = "7"

[dev-dependencies]
tempfile = "3"
