[package]
name = "aura-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
aura-voice = { path = "../aura-voice" }
aura-menubar = { path = "../aura-menubar" }
aura-screen = { path = "../aura-screen" }
aura-bridge = { path = "../aura-bridge" }
aura-gemini = { path = "../aura-gemini" }
aura-memory = { path = "../aura-memory" }
aura-input = { path = "../aura-input" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tokio-util = "0.7"
dirs = "6"
which = "7"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
aura-gemini = { path = "../aura-gemini" }
