[package]
name = "aura-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
aura-voice = { path = "../aura-voice" }
aura-menubar = { path = "../aura-menubar" }
aura-screen = { path = "../aura-screen" }
aura-bridge = { path = "../aura-bridge" }
aura-gemini = { path = "../aura-gemini" }
aura-memory = { path = "../aura-memory" }
aura-firestore = { path = "../aura-firestore" }
aura-input = { path = "../aura-input" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7", features = ["rt"] }
dirs = "6"
which = "7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.12"
toml = "0.8"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[dev-dependencies]
tempfile = "3"
aura-gemini = { path = "../aura-gemini" }
