[package]
name = "aura-gemini"
version.workspace = true
edition.workspace = true

[features]
test-support = []

[dev-dependencies]
aura-gemini = { path = ".", features = ["test-support"] }
tokio = { workspace = true, features = ["test-util"] }

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
futures-util = "0.3"
tokio-util = "0.7"
