[package]
name = "aura-llm"
version.workspace = true
edition.workspace = true

[features]
test-support = []

[dev-dependencies]
aura-llm = { path = ".", features = ["test-support"] }

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
