[package]
name = "aura-memory"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt"] }
rusqlite = { version = "0.32" }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
