[package]
name = "aura-overlay"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
skia-safe = "0.82"
softbuffer = "0.4"
raw-window-handle = "0.6"
winit = { version = "0.30", features = ["rwh_06"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
