[package]
name = "aura-proxy"
version.workspace = true
edition.workspace = true

[lib]
name = "aura_proxy"
path = "src/lib.rs"

[[bin]]
name = "aura-proxy"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
