[package]
name = "aura-proxy"
version.workspace = true
edition.workspace = true

[lib]
name = "aura_proxy"
path = "src/lib.rs"

[[bin]]
name = "aura-proxy"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
subtle = "2"
sha2 = "0.10"
chrono = "0.4"
rand = "0.9"
hex = "0.4"
async-trait = "0.1"

[dev-dependencies]
