[package]
name = "aura-voice"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
cpal = "0.15"
rustpotter = "3"
whisper-rs = { version = "0.12", features = ["coreml"] }
voice_activity_detector = "0.2"
dirs = "6"
which = "7"
tokio-util = "0.7"
