[workspace]

[package]
name = "aura-consolidation"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
chrono = "0.4.44"
futures = "0.3.32"
